--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SITE TITLE -->
-    <title>Device Info | View Device Information - Android App</title>
+    <title>Device Check | View Device Information - Android App</title>
     <!-- Latest Bootstrap min CSS -->
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <!-- Google Font -->
@@ -119,9 +119,9 @@
             <p></p>
             <h2 style="margin-top: 25px;">Privacy Policy</h2>
 
-            <p>Developer : Yasiru Nayanajith</p>
-            <p>Address : Swarna Jayanthi Mawatha, Gonna Kohilegedara, Sri Lanka</p>
-            <p>Email : support@deviceinfo.app</p>
+            <p>Developer : Jameson</p>
+            <!-- <p>Address : Swarna Jayanthi Mawatha, Gonna Kohilegedara, Sri Lanka</p> -->
+            <p>Email : zar02236@qq.com</p>
         </div>
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12">
@@ -162,7 +162,7 @@
 
                 <p>If you have any questions or concerns about this policy, you can contact us by </p>
 
-                email: support@deviceinfo.app
+                email: zar02236@qq.com
 
             </div><!--- END COL -->
         </div><!--- END ROW -->
@@ -176,7 +176,7 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
                 <div class="single_footer">
-                    <p class="copyright">Copyright © 2021 | All Rights Reserved | Designed by Yasiru Nayanajith</p>
+                    <p class="copyright"></p>
                 </div>
             </div><!--- END COL -->
         </div><!--- END ROW -->
