提交隐私协议

--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -128,7 +128,7 @@
 
                 <h4><strong>Data Collection</strong></h4><br>
 
-                <p>Device Info does not collect user confidential data. The only data collected by the device info are the device Model and the device manufacturer. We use these data to detect the chipset, device name, CPU architecture, memory type, and bandwidth, etc. We do not collect personal information such as email addresses, your name, address, etc. Also, we have integrated the Google Firebase platform. So firebase will collect the data for it to work.</p>
+                <p>Device Check does not collect user confidential data. The only data collected by the device info are the device Model and the device manufacturer. We use these data to detect the chipset, device name, CPU architecture, memory type, and bandwidth, etc. We do not collect personal information such as email addresses, your name, address, etc. Also, we have integrated the Google Firebase platform. So firebase will collect the data for it to work.</p>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
