提交隐私协议

--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -16,19 +16,19 @@
     <link rel="stylesheet" href="../assets/css/deviceinfo.css">
 
     <meta name="author" content="Yasiru Nayanajith">
-    <meta name="description" content="Device Info is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
-    <meta property="og:description" content="Device Info is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
-    <meta property="og:title" content="Device Info | View Device Information - Android App">
+    <meta name="description" content="Device Check is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
+    <meta property="og:description" content="Device Check is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
+    <meta property="og:title" content="Device Check | View Device Checkrmation - Android App">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.deviceinfo.app/">
     <meta property="og:image" content="https://www.deviceinfo.app/assets/img/banner.jpg">
-    <meta property="og:site_name" content="Device Info | View Device Information - Android App">
+    <meta property="og:site_name" content="Device Check | View Device Checkrmation - Android App">
     <meta property="fb:app_id" content="724818121390440">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@DeviceInfoApp">
-    <meta name="twitter:title" content="Device Info | View Device Information - Android App">
-    <meta name="twitter:description" content="Device Info is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
+    <meta name="twitter:title" content="Device Check | View Device Checkrmation - Android App">
+    <meta name="twitter:description" content="Device Check is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces">
     <meta name="twitter:image" content="https://www.deviceinfo.app/assets/img/banner.jpg">
 
     <meta name="msvalidate.01" content="32F61198F1A9AB58D21C6D7D1563D977">
@@ -38,7 +38,7 @@
         {
             "@context": "https://schema.org",
             "@type": "SoftwareApplication",
-            "name": "Device Info : View Device Information",
+            "name": "Device Check : View Device Checkrmation",
             "operatingSystem": "Android",
             "applicationCategory": "UtilitiesApplication",
             "aggregateRating": {
@@ -128,7 +128,7 @@
 
                 <h4><strong>Data Collection</strong></h4><br>
 
-                <p>Device Check does not collect user confidential data. The only data collected by the device info are the device Model and the device manufacturer. We use these data to detect the chipset, device name, CPU architecture, memory type, and bandwidth, etc. We do not collect personal information such as email addresses, your name, address, etc. Also, we have integrated the Google Firebase platform. So firebase will collect the data for it to work.</p>
+                <p>Device Check does not collect user confidential data. The only data collected by the Device Check are the device Model and the device manufacturer. We use these data to detect the chipset, device name, CPU architecture, memory type, and bandwidth, etc. We do not collect personal information such as email addresses, your name, address, etc. Also, we have integrated the Google Firebase platform. So firebase will collect the data for it to work.</p>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
