--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -121,7 +121,7 @@
 
             <p>Developer : Jameson</p>
             <!-- <p>Address : Swarna Jayanthi Mawatha, Gonna Kohilegedara, Sri Lanka</p> -->
-            <p>Email : zar02236@qq.com</p>
+            <p>Email : Jameson@gmail.com</p>
         </div>
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12">
@@ -162,7 +162,7 @@
 
                 <p>If you have any questions or concerns about this policy, you can contact us by </p>
 
-                email: zar02236@qq.com
+                email: Jameson@gmail.com
 
             </div><!--- END COL -->
         </div><!--- END ROW -->
