--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -126,9 +126,23 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12">
 
-                <h4><strong>Data Collection</strong></h4><br>
+                <h4><strong>Information Collection and Use</strong></h4><br>
 
-                <p>Device Check does not collect user confidential data. The only data collected by the Device Check are the device Model and the device manufacturer. We use these data to detect the chipset, device name, CPU architecture, memory type, and bandwidth, etc. We do not collect personal information such as email addresses, your name, address, etc. Also, we have integrated the Google Firebase platform. So firebase will collect the data for it to work.</p>
+                <p>This page is used to inform visitors regarding Privacy Policies with the collection, use, and
+
+                    disclosure of Personal Information if anyone decided to use Device Info+.
+
+
+                    If you choose to use Device Info+, then you agree to the collection and use of information in relation to this policy.
+
+                    The Personal Information that we collect is used for providing and improving the Service. We will not use or share your
+
+                    information with anyone except as described in this Privacy Policy.
+
+
+                    The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
+
+                    at Device Info+ unless otherwise defined in this Privacy Policy.</p>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
