--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -130,10 +130,10 @@
 
                 <p>This page is used to inform visitors regarding Privacy Policies with the collection, use, and
 
-                    disclosure of Personal Information if anyone decided to use Device Info+.
+                    disclosure of Personal Information if anyone decided to use Device Check.
 
 
-                    If you choose to use Device Info+, then you agree to the collection and use of information in relation to this policy.
+                    If you choose to use Device Check, then you agree to the collection and use of information in relation to this policy.
 
                     The Personal Information that we collect is used for providing and improving the Service. We will not use or share your
 
@@ -142,7 +142,7 @@
 
                     The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
 
-                    at Device Info+ unless otherwise defined in this Privacy Policy.</p>
+                    at Device Check unless otherwise defined in this Privacy Policy.</p>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
