--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -126,8 +126,6 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-xs-12">
 
-                <h4><strong>Information Collection and Use</strong></h4><br>
-
                 <p>This page is used to inform visitors regarding Privacy Policies with the collection, use, and
 
                     disclosure of Personal Information if anyone decided to use Device Check.
@@ -143,6 +141,10 @@
                     The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
 
                     at Device Check unless otherwise defined in this Privacy Policy.</p>
+
+                <h4><strong>Information Collection and Use</strong></h4><br>
+
+                <p>We collect information about your device and network connection in order to provide you with a better experience when you use our applications.</p>>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
