--- a/deviceCheck/app/privacy/policy.html
+++ b/deviceCheck/app/privacy/policy.html
@@ -144,7 +144,7 @@
 
                 <h4><strong>Information Collection and Use</strong></h4><br>
 
-                <p>We collect information about your device and network connection in order to provide you with a better experience when you use our applications.</p>>
+                <p>We collect information about your device and network connection in order to provide you with a better experience when you use our applications.</p>
 
                 <a href="https://firebase.google.com/terms" target="_blank"><p>Firebase Terms of Service</p></a>
 
